--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,7 +1,5 @@
 sources:
-  - Rubik.glyphs
-  - Rubik-Italic.glyphs
+  - Sankofa Display Regular.glyphs
 axisOrder:
   - wght
-  - ital
-familyName: Rubik
+familyName: Sankofa Display
