--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,3 +1,12 @@
 sources:
-  - Sankofa.glyphs
+  -  Sankofa.glyphs
+outputDir: "../fonts"
+buildStatic: true
+buildVariable: false
+buildTTF: true
+buildOTF: false
+buildWebfont: false
+cleanUp: true
+includeSourceFixes: false
+interpolate: true
 familyName: Sankofa Display
